// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders components/flex/demo/align.tsx extend context correctly 1`] = `
Array [
  <div
    class="ant-segmented"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="flex-start"
        >
          flex-start
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="flex-end"
        >
          flex-end
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="start"
        >
          start
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="end"
        >
          end
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="center"
        >
          center
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="space-between"
        >
          space-between
        </div>
      </label>
      <label
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="space-around"
        >
          space-around
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="space-evenly"
        >
          space-evenly
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="stretch"
        >
          stretch
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="normal"
        >
          normal
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="left"
        >
          left
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="right"
        >
          right
        </div>
      </label>
    </div>
  </div>,
  <br />,
  <br />,
  <div
    class="ant-segmented"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="center"
        >
          center
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="start"
        >
          start
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="end"
        >
          end
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="flex-start"
        >
          flex-start
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="flex-end"
        >
          flex-end
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="self-start"
        >
          self-start
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="self-end"
        >
          self-end
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="baseline"
        >
          baseline
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="normal"
        >
          normal
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="stretch"
        >
          stretch
        </div>
      </label>
    </div>
  </div>,
  <br />,
  <br />,
  <div
    class="ant-flex ant-flex-justify-space-around ant-flex-align-center"
    style="width: 100%; height: 100px; border: 1px solid #40a9ff;"
  >
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Primary
      </span>
    </button>
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Primary
      </span>
    </button>
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Primary
      </span>
    </button>
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Primary
      </span>
    </button>
  </div>,
]
`;

exports[`renders components/flex/demo/align.tsx extend context correctly 2`] = `[]`;

exports[`renders components/flex/demo/basic.tsx extend context correctly 1`] = `
<div
  class="ant-flex"
>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-small"
    style="margin: 10px;"
  >
    <div
      class="ant-card-body"
    >
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
    </div>
  </div>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-small"
    style="margin: 10px;"
  >
    <div
      class="ant-card-body"
    >
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
    </div>
  </div>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-small"
    style="margin: 10px;"
  >
    <div
      class="ant-card-body"
    >
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
    </div>
  </div>
</div>
`;

exports[`renders components/flex/demo/basic.tsx extend context correctly 2`] = `[]`;

exports[`renders components/flex/demo/gap.tsx extend context correctly 1`] = `
Array [
  <div
    class="ant-segmented"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="small"
        >
          small
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="middle"
        >
          middle
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="large"
        >
          large
        </div>
      </label>
    </div>
  </div>,
  <br />,
  <br />,
  <div
    class="ant-flex ant-flex-gap-small"
  >
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Primary
      </span>
    </button>
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span>
        Default
      </span>
    </button>
    <button
      class="ant-btn ant-btn-dashed"
      type="button"
    >
      <span>
        Dashed
      </span>
    </button>
    <button
      class="ant-btn ant-btn-link"
      type="button"
    >
      <span>
        Link
      </span>
    </button>
  </div>,
]
`;

exports[`renders components/flex/demo/gap.tsx extend context correctly 2`] = `[]`;

exports[`renders components/flex/demo/gap-customize.tsx extend context correctly 1`] = `
Array [
  <div
    class="ant-slider ant-slider-horizontal"
  >
    <div
      class="ant-slider-rail"
    />
    <div
      class="ant-slider-track"
      style="left: 0%; width: 8%;"
    />
    <div
      class="ant-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="8"
      class="ant-slider-handle"
      role="slider"
      style="left: 8%; transform: translateX(-50%);"
      tabindex="0"
    />
    <div
      class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-slider-tooltip ant-tooltip-placement-top"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="ant-tooltip-arrow"
        style="position: absolute; bottom: 0px; left: 0px;"
      />
      <div
        class="ant-tooltip-content"
      >
        <div
          class="ant-tooltip-inner"
          role="tooltip"
        >
          8
        </div>
      </div>
    </div>
  </div>,
  <br />,
  <br />,
  <div
    class="ant-flex"
    style="gap: 8px;"
  >
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Primary
      </span>
    </button>
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span>
        Default
      </span>
    </button>
    <button
      class="ant-btn ant-btn-dashed"
      type="button"
    >
      <span>
        Dashed
      </span>
    </button>
    <button
      class="ant-btn ant-btn-link"
      type="button"
    >
      <span>
        Link
      </span>
    </button>
  </div>,
]
`;

exports[`renders components/flex/demo/gap-customize.tsx extend context correctly 2`] = `[]`;

exports[`renders components/flex/demo/vertical.tsx extend context correctly 1`] = `
<div
  class="ant-flex ant-flex-direction-column ant-flex-align-stretch"
>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-small"
    style="margin: 10px;"
  >
    <div
      class="ant-card-body"
    >
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
    </div>
  </div>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-small"
    style="margin: 10px;"
  >
    <div
      class="ant-card-body"
    >
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
    </div>
  </div>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-small"
    style="margin: 10px;"
  >
    <div
      class="ant-card-body"
    >
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
    </div>
  </div>
</div>
`;

exports[`renders components/flex/demo/vertical.tsx extend context correctly 2`] = `[]`;
